refactor: extracting out the estatistica controller logic and entities to its own package